# eclexia

./: .dockerignore  .gitignore  .tool-versions  0-AI-MANIFEST.a2ml  ABI-FFI-README.adoc  AFFIRMATION.adoc  ALGORITHMS.md  ANCHOR.scm  BIBLIOGRAPHY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Dockerfile  ECLEXIA-COMPLETE-STATUS-2026-02-09.md  ECOSYSTEM.scm  EXTENDED_PROOFS.md  FORMAL_VERIFICATION.md  GETTING_STARTED.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_ROADMAP.md  Justfile  MAINTAINER  META.scm  MULTICOMPILER-ARCHITECTURE.md  Mustfile  NAVIGATION.adoc  PARSER-ISSUES-ANALYSIS.md  PROGRESS-2026-02-07.md  PROOFS.md  QUICK_STATUS.md  README-SUSTAINABILITY.md  README.adoc  README.md  ROADMAP.adoc  ROADMAP.md  SEAM_ANALYSIS.md  SECURITY-SETUP.md  SECURITY.md  (+20 more)
.claude/: CLAUDE.md
.clusterfuzzlite/: Dockerfile  project.yaml
.github/: CODEOWNERS
.machine_read/: AUTHORITY_STACK.scm  LLM_SUPERINTENDENT.scm  ROADMAP.f0.scm  SATELLITE_ANCHOR_TEMPLATE.scm
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: keybase.txt  sellers.json
benches/: bench_energy.ecl  bench_example.ecl
business/: ACADEMIC-PAPER.md  BUSINESS-PLAN.md  MARKET-ANALYSIS.md  ONE-PAGER.md  PITCH-DECK.md  REVENUE-MODEL.md  SPONSORSHIP.md
compiler/eclexia/: Cargo.toml
compiler/eclexia-ast/: Cargo.toml
compiler/eclexia-ast/src/: dimension.rs  lib.rs  span.rs  types.rs  visitor.rs
compiler/eclexia-codegen/: Cargo.toml
compiler/eclexia-codegen/src/: bytecode.rs  cranelift_backend.rs  lib.rs  vm.rs
compiler/eclexia-codegen/tests/: integration_test.rs  pipeline_test.rs
compiler/eclexia-comptime/: Cargo.toml
compiler/eclexia-comptime/src/: const_fold.rs  lib.rs  resource_verify.rs
compiler/eclexia-cranelift/: Cargo.toml
compiler/eclexia-cranelift/src/: lib.rs
compiler/eclexia-dap/: Cargo.toml
compiler/eclexia-dap/src/: main.rs
compiler/eclexia-db/: Cargo.toml
compiler/eclexia-db/src/: lib.rs  queries.rs  vfs.rs
compiler/eclexia-debugger/: Cargo.toml
compiler/eclexia-debugger/src/: breakpoint.rs  inspection.rs  lib.rs  session.rs
compiler/eclexia-doc/: Cargo.toml
compiler/eclexia-doc/src/: lib.rs  style.css
compiler/eclexia-effects/: Cargo.toml
compiler/eclexia-effects/src/: evidence.rs  lib.rs  row.rs
compiler/eclexia-fmt/: Cargo.toml
compiler/eclexia-fmt/src/: lib.rs  printer.rs
compiler/eclexia-hir/: Cargo.toml
compiler/eclexia-hir/src/: lib.rs  lower.rs
compiler/eclexia-interp/: Cargo.toml
compiler/eclexia-interp/src/: builtins.rs  env.rs  error.rs  eval.rs  lib.rs  value.rs
compiler/eclexia-lexer/: Cargo.toml
compiler/eclexia-lexer/src/: lib.rs
compiler/eclexia-lint/: Cargo.toml
compiler/eclexia-lint/src/: diagnostics.rs  lib.rs
compiler/eclexia-lint/src/rules/: long_line.rs  mod.rs  negative_resource.rs  trailing_whitespace.rs  unbounded_resource.rs  unreachable_code.rs  unused_variable.rs
compiler/eclexia-llvm/: Cargo.toml
compiler/eclexia-llvm/src/: lib.rs
compiler/eclexia-lsp/: Cargo.toml  README.md
compiler/eclexia-lsp/src/: lib.rs  main.rs  server.rs  symbols.rs
compiler/eclexia-mir/: Cargo.toml
compiler/eclexia-mir/src/: lib.rs  lower.rs  optimize.rs
compiler/eclexia-modules/: Cargo.toml
compiler/eclexia-modules/src/: dep_graph.rs  interface.rs  lib.rs  parallel.rs
compiler/eclexia-parser/: Cargo.toml
compiler/eclexia-parser/src/: error.rs  expr.rs  lib.rs
compiler/eclexia-specialize/: Cargo.toml
compiler/eclexia-specialize/src/: binding_time.rs  lib.rs  residualize.rs
compiler/eclexia-typeck/: Cargo.toml
compiler/eclexia-typeck/src/: env.rs  error.rs  infer.rs  lib.rs  unify.rs
compiler/eclexia-wasm/: Cargo.toml
compiler/eclexia-wasm/src/: lib.rs
compiler/eclexia/src/: bench_runner.rs  cache.rs  commands.rs  interop.rs  lockfile.rs  main.rs  package.rs  package_manager.rs  registry.rs  repl.rs  resolver.rs  test_runner.rs
compiler/eclexia/tests/: conformance_tests.rs  integration_tests.rs
docs/: CARBON_APIS.md  CNAME  COMPREHENSIVE-TEST-TAXONOMY.md  ECLEXIA-COMPLETE-STATUS-2026-02-09.md  Eclexia-Implementation-Plan-Feb-12-2026.md  IMPLEMENTATION-PLAN.md  NEXT-SESSION-PROMPT-2026-06-19.md  PACKAGE_SPEC.md  README.md  ads.txt  collections.html  core.html  io.html  math.html  proof-debt.md  stdlib-index.html  tech-debt-2026-05-26.md  text.html  time.html
examples/: bench_energy.ecl  bench_example.ecl  budget_enforcement.ecl  carbon_aware.ecl  closures.ecl  collections.ecl  comprehensive_opportunity.ecl  control_flow.ecl  dimensional_types.ecl  echo_thermo.ecl  echo_types.ecl  effect_system_demo.ecl  error_handling.ecl  fibonacci.ecl  generics.ecl  hashmaps.ecl  hello.ecl  hello_world.ecl  higher_order.ecl  json_test.ecl  macros.ecl  math_showcase.ecl  matrix_multiply.ecl  module_system_demo.ecl  multi_objective_optimization.ecl  pattern_matching.ecl  range_loops.ecl  recursion.ecl  resource_tracking.ecl  shadow_price_optimization.ecl  string_processing.ecl  struct_enum.ecl  supply_chain_economics.ecl  sustainabot_policy.ecl  test_example.ecl  traits_and_impls.ecl  type_system.ecl  unicode_ids.ecl  vm_test.ecl
formal/: EXTENDED_PROOFS.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_main.rs
interop/: INTEROP_STATUS.md  affinescript_bridge.toml  betlang_bridge.toml  phronesis_bridge.toml  wokelang_bridge.toml
libraries/eclexia-cli/: Cargo.toml
libraries/eclexia-cli/src/: lib.rs
libraries/eclexia-compression/: Cargo.toml
libraries/eclexia-compression/src/: lib.rs
libraries/eclexia-env/: Cargo.toml
libraries/eclexia-env/src/: lib.rs
libraries/eclexia-process/: Cargo.toml
libraries/eclexia-process/src/: lib.rs
libraries/eclexia-serialisation/: Cargo.toml
libraries/eclexia-serialisation/src/: lib.rs
licensing/: README.adoc
playground/: README.md  server.js
public_relations/: COMPREHENSIVE-TOOLKIT.md  README.md  blog-post.md  conference-slides-outline.md  first-tweet.md  full-toolkit.md  hackernews-show-hn.md  launch-day-blog.md
site/: index.md
spec/: axiomatic-semantics.md  grammar.ebnf  (+3 more)
(+277 files in other folders)
