[package]
name = "eclexia-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"

[dependencies.eclexia-parser]
path = "../compiler/eclexia-parser"

[[bin]]
name = "fuzz_main"
path = "fuzz_targets/fuzz_main.rs"
test = false
doc = false
