# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-codegen"
description = "Code generation for the Eclexia compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-mir = { path = "../eclexia-mir" }
smol_str = { workspace = true }
rustc-hash = { workspace = true }
la-arena = { workspace = true }

[dev-dependencies]
eclexia-lexer = { path = "../eclexia-lexer" }
eclexia-parser = { path = "../eclexia-parser" }
eclexia-typeck = { path = "../eclexia-typeck" }
eclexia-hir = { path = "../eclexia-hir" }
