# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-codegen"
description = "Code generation for the Eclexia compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-mir = { path = "../eclexia-mir" }
eclexia-dom = { path = "../../runtime/eclexia-dom" }
smol_str = { workspace = true }
rustc-hash = { workspace = true }
la-arena = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "eclexia-ast/serde-types", "smol_str/serde"]

[dev-dependencies]
eclexia-lexer = { path = "../eclexia-lexer" }
eclexia-parser = { path = "../eclexia-parser" }
eclexia-typeck = { path = "../eclexia-typeck" }
eclexia-hir = { path = "../eclexia-hir" }
