# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-effects"
description = "Algebraic effect compilation via evidence-passing for Eclexia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-mir = { path = "../eclexia-mir" }

smol_str = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
