# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-lint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-parser = { path = "../eclexia-parser" }
eclexia-typeck = { path = "../eclexia-typeck" }
smol_str = { workspace = true }
serde = { workspace = true }

[dev-dependencies]

[features]
default = []
