# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-llvm"
description = "LLVM native code backend for Eclexia (optimized release builds)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-mir = { path = "../eclexia-mir" }
eclexia-codegen = { path = "../eclexia-codegen" }

smol_str = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
la-arena = { workspace = true }

[dev-dependencies]
