# SPDX-License-Identifier: MPL-2.0
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-mir"
description = "Mid-level intermediate representation for Eclexia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-hir = { path = "../eclexia-hir" }
smol_str = { workspace = true }
la-arena = { workspace = true }
rustc-hash = { workspace = true }
