# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-modules"
description = "Module system with interface files and dependency tracking for Eclexia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-parser = { path = "../eclexia-parser" }
eclexia-typeck = { path = "../eclexia-typeck" }

smol_str = { workspace = true }
rustc-hash = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
