# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-parser"
description = "Parser for the Eclexia programming language"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-lexer = { path = "../eclexia-lexer" }
smol_str = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
