# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia-specialize"
description = "Partial evaluation and adaptive function specialization for Eclexia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-mir = { path = "../eclexia-mir" }
eclexia-comptime = { path = "../eclexia-comptime" }

smol_str = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
la-arena = { workspace = true }
