# SPDX-License-Identifier: PMPL-1.0-or-later
# SPDX-FileCopyrightText: 2025 Jonathan D.A. Jewell

[package]
name = "eclexia"
description = "Eclexia compiler and toolchain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "eclexia"
path = "src/main.rs"

[dependencies]
eclexia-ast = { path = "../eclexia-ast" }
eclexia-lexer = { path = "../eclexia-lexer" }
eclexia-parser = { path = "../eclexia-parser" }
eclexia-typeck = { path = "../eclexia-typeck" }
eclexia-hir = { path = "../eclexia-hir" }
eclexia-mir = { path = "../eclexia-mir" }
eclexia-codegen = { path = "../eclexia-codegen", features = ["serde"] }
eclexia-interp = { path = "../eclexia-interp" }
eclexia-fmt = { path = "../eclexia-fmt" }
eclexia-lint = { path = "../eclexia-lint" }
eclexia-debugger = { path = "../eclexia-debugger" }
eclexia-doc = { path = "../eclexia-doc" }
eclexia-runtime = { path = "../../runtime/eclexia-runtime" }
eclexia-db = { path = "../eclexia-db" }
eclexia-tiered = { path = "../eclexia-tiered" }

notify = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
rustyline = { workspace = true }
smol_str = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
tar = "0.4"
serde_json = "1.0"
